fix(usermenu): fixed chrome render bug of the scrollbar

--- a/app/client/stylesheets/components/pu-profilemenu.sass
+++ b/app/client/stylesheets/components/pu-profilemenu.sass
@@ -2,6 +2,7 @@
     section
         height: 546px - 60px
         overflow: auto
+        transform: translateZ(0px)
 
         > p
             color: $color-text-secondary
